@@ -167,7 +167,8 @@ SDCCERR - SDCC Standard error handler
 #define W_STRAY_BACKSLASH 149
 #define W_NEWLINE_IN_STRING 150 
 #define E_CANNOT_USE_GENERIC_POINTER 151
-#define  W_EXCESS_SHORT_OPTIONS 152
+#define W_EXCESS_SHORT_OPTIONS 152
+#define E_VOID_VALUE_USED 153
 
 /** Describes the maximum error level that will be logged.  Any level
  *  includes all of the levels listed after it.
